--- a/about.html
+++ b/about.html
@@ -8,21 +8,17 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Navigation -->
+  <!-- Header commun -->
   <header>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="gallery.html">Collections</a></li>
-        <li><a href="about.html">À propos</a></li>
-        <li><a href="store.html">Boutique</a></li>
-        <li><a href="cart.html">Panier</a></li>
-      </ul>
+    <div class="header-container">
+      <div class="logo">
+        <a href="index.html">Maison Baumann</a>
+      </div>
       <div id="hamburger" class="hamburger">&#9776;</div>
-    </nav>
+    </div>
   </header>
   <div id="overlay" class="overlay"></div>
-  <div id="mobile-menu" class="mobile-menu">
+  <nav id="mobile-menu" class="mobile-menu">
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="gallery.html">Collections</a></li>
@@ -30,9 +26,9 @@
       <li><a href="store.html">Boutique</a></li>
       <li><a href="cart.html">Panier</a></li>
     </ul>
-  </div>
+  </nav>
 
-  <!-- Contenu "À propos" -->
+  <!-- Contenu À propos -->
   <main class="about">
     <h2>À propos de Maison Baumann</h2>
     <p>
