--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       right: -250px; /* hors de l'écran */
       width: 250px;
       height: 100%;
-      background: rgba(0,0,0,0.95);
+      background: transparent; /* fond transparent */
       z-index: 1200;
       transition: right 0.3s ease;
       display: flex;
