--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       transform: translate(-50%, -50%);
       z-index: 2;
       color: #fff;
-      font-size: 2rem; /* Taille réduite pour un style élégant */
+      font-size: 1rem; /* Taille réduite de moitié */
       text-shadow: 0 0 5px rgba(0,0,0,0.7);
       white-space: nowrap;
     }
@@ -140,7 +140,7 @@
     /* === Adaptations pour mobile === */
     @media only screen and (max-width: 768px) {
       .hero-title {
-        font-size: 1.5rem; /* Titre encore un peu plus petit sur mobile */
+        font-size: 0.75rem; /* Adaptation du titre pour mobile */
       }
       /* Ajustement du menu latéral */
       .side-menu {
