--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
       width: 100%;
       text-align: center;
     }
+    /* Réduction de l'interlignage (espacement) entre les onglets */
     .side-menu li {
-      margin: 1rem 0;
+      margin: 0.5rem 0;
     }
     .side-menu a {
       text-decoration: none;
