--- a/about.html
+++ b/about.html
@@ -15,6 +15,9 @@
       width: 100%;
       height: 100%;
       font-family: Arial, sans-serif;
+      /* Fond remplacé par l'image collage_site.jpg */
+      background: url('collage_site.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
     
     /* === Header & Hamburger === */
@@ -59,7 +62,7 @@
       text-align: center;
     }
     .side-menu li {
-      margin: 0.5rem 0; /* Espacement resserré */
+      margin: 0.5rem 0;
     }
     .side-menu a {
       text-decoration: none;
@@ -89,11 +92,11 @@
     
     /* === Contenu principal centré === */
     main.about {
-      padding: 4rem 2rem 2rem; /* Espace en haut pour ne pas être caché par le header */
+      padding: 4rem 2rem 2rem; /* espace en haut pour le header */
       text-align: center;
       max-width: 800px;
       margin: 0 auto;
-      color: #333;
+      color: #fff; /* couleur du texte adaptée au fond */
     }
     main.about h2 {
       margin-bottom: 1rem;
